[gd_scene load_steps=4 format=3 uid="uid://main_scene"]

[ext_resource type="Script" path="res://scripts/Main.gd" id="1"]
[ext_resource type="PackedScene" path="res://scenes/Basket.tscn" id="2"]

[node name="Main" type="Node2D"]
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
offset_right = 800.0
offset_<applaa-write path="godot-project/scenes/Main.tscn" description="Main game scene">
[gd_scene load_steps=4 format=3 uid="uid://main_scene"]

[ext_resource type="Script" path="res://scripts/Main.gd" id="1"]
[ext_resource type="PackedScene" path="res://scenes/Basket.tscn" id="2"]

[node name="Main" type="Node2D"]
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
offset_right = 800.0
offset_bottom = 600.0
color = Color(0.529, 0.808, 0.922, 1)

[node name="Grass" type="ColorRect" parent="."]
offset_top = 570.0
offset_right = 800.0
offset_bottom = 600.0
color = Color(0.133, 0.545, 0.133, 1)

[node name="Basket" parent="." instance=ExtResource("2")]
position = Vector2(400, 520)

[node name="HUD" type="CanvasLayer" parent="."]

[node name="TopPanel" type="PanelContainer" parent="HUD"]
offset_right = 800.0
offset_bottom = 80.0

[node name="HBoxContainer" type="HBoxContainer" parent="HUD/TopPanel"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="TargetPanel" type="PanelContainer" parent="HUD/TopPanel/HBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="HUD/TopPanel/HBoxContainer/TargetPanel"]
layout_mode = 2

[node name="TargetTitle" type="Label" parent="HUD/TopPanel/HBoxContainer/TargetPanel/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Target: "

[node name="TargetLabel" type="Label" parent="HUD/TopPanel/HBoxContainer/TargetPanel/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "üçé Apple"

[node name="Spacer" type="Control" parent="HUD/TopPanel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ScorePanel" type="PanelContainer" parent="HUD/TopPanel/HBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HUD/TopPanel/HBoxContainer/ScorePanel"]
layout_mode = 2

[node name="ScoreLabel" type="Label" parent="HUD/TopPanel/HBoxContainer/ScorePanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Score: 0"
horizontal_alignment = 1

[node name="HighScoreLabel" type="Label" parent="HUD/TopPanel/HBoxContainer/ScorePanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Best: 0"
horizontal_alignment = 1

[node name="ProgressContainer" type="PanelContainer" parent="HUD"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -150.0
offset_top = -100.0
offset_right = 150.0
offset_bottom = -60.0

[node name="VBoxContainer" type="VBoxContainer" parent="HUD/ProgressContainer"]
layout_mode = 2

[node name="ProgressLabel" type="Label" parent="HUD/ProgressContainer/VBoxContainer"]
layout_mode = 2
text = "Basket Fill"
horizontal_alignment = 1

[node name="ProgressBar" type="ProgressBar" parent="HUD/ProgressContainer/VBoxContainer"]
layout_mode = 2
max_value = 100.0
value = 0.0
show_percentage = true

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 0.8
autostart = true